--- a/exp.html
+++ b/exp.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TunyakarnK Home</title>
+  <title>TunyakarnK Experience</title>
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
@@ -24,24 +24,6 @@
     </div>
   </div>
 
-
-  <div class="space-y-4">
-    <!--about me content-->
-    <div class="bg-white max-w-screen-md mx-auto shadow-lg rounded-xl ring-1">
-      <div class="flex p-4">
-        <img class="w-24 h-24 rounded-full" src="picture/me.png">
-        <!--header description-->
-        <div class="p-4">
-          <p class="font-semibold text-lg"><a href="post1.html"> Tunyakarn Kitchon </p>
-          <p class="text-sm text-gray-600">
-            Hi! My name is Tunyakarn Kitchon. I'm 
-          </p>
-        </div>
-      </div>
-
-
-    </div>
-  </div>
 
 
 </body>
