--- a/exp.html
+++ b/exp.html
@@ -7,22 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TunyakarnK Experience</title>
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="bg-indigo-300">
-  <!--NavBar-->
-  <div class="bg-white border-b-2 py-4 mb-4">
-    <div class="bg-white  flex justify-between max-w-screen-md mx-auto">
-      <p class="flex font-semibold text-xl ">TunyakarnK
-      </p>
-      <!--NavBar Icon-->
-      <div class="flex space-x-10">
-        <a href="index.html">Home</a>
-        <a href="exp.html">Experience</a>
-        <a href="contact.html">Contact</a>
-      </div>
+  <div class="navbar">
+    <b class="py-3 px-20">TunyakarnK</b>
+     <b style="float: right;">&nbsp;&nbsp;</b> 
+    <a href="contact.html">Contact</a>
+    <a href="exp.html">Experience</a>
+    <a href="index.html">Home</a>
     </div>
-  </div>
 
 
 
