--- a/index.html
+++ b/index.html
@@ -7,41 +7,38 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TunyakarnK Home</title>
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-indigo-300">
-  <!--NavBar-->
-  <div class="bg-white border-b-2 py-4 mb-4">
-    <div class="bg-white  flex justify-between max-w-screen-md mx-auto">
-      <p class="flex font-semibold text-xl ">TunyakarnK
-      </p>
-      <!--NavBar Icon-->
-      <div class="flex space-x-10">
-        <a href="index.html">Home</a>
-        <a href="exp.html">Experience</a>
-        <a href="contact.html">Contact</a>
-      </div>
+<body>
+  
+<!--NavBar-->
+    <div class="navbar">
+    <b class="py-3 px-20">TunyakarnK</b>
+     <b style="float: right;">&nbsp;&nbsp;</b> 
+    <a href="contact.html">Contact</a>
+    <a href="exp.html">Experience</a>
+    <a href="index.html">Home</a>
     </div>
-  </div>
+<!--parallax-->
 
-
-  <div class="space-y-4">
-    <!--about me content-->
-    <div class="bg-white max-w-screen-md mx-auto shadow-lg rounded-xl ring-1">
-      <div class="flex p-4">
-        <img class="w-24 h-24 rounded-full" src="picture/me.png">
-        <!--header description-->
-        <div class="p-4">
-          <p class="font-semibold text-lg"><a href="post1.html"> Tunyakarn Kitchon </p>
-          <p class="text-sm text-gray-600">
-            Hi! My name is Tunyakarn Kitchon. I'm 
-          </p>
-        </div>
-      </div>
-
-
+    <div class="parallax"> 
     </div>
-  </div>
+    <p>ABOUT ME</p>
+
+    <div class="main">
+      Hi! My name is Tunyakarn Kitchon. I'm A Computer Engineering Student of Chiang Mai University. I'm interested in Computer Programming. as well as Art, Music and learning new thing! At the moment, I'm learning about website devolopment. Feel free to scroll down and take a look to know more about me!
+    </div>
+
+    <!--ประวัติ+รูป-->
+    <div>MY BIO</div>
+<div>Name : Tunyakarn Kitchon (ธันยกานต์ กิจชนม์) Nickname : Gow (เก้า) Birth: 5 December 2001 </div>
+
+  
+  
+  
+      
+
 
 
 </body>
