--- a/index.html
+++ b/index.html
@@ -8,38 +8,91 @@
   <title>TunyakarnK Home</title>
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  
-<!--NavBar-->
-    <div class="navbar">
-    <b class="py-3 px-20">TunyakarnK</b>
-     <b style="float: right;">&nbsp;&nbsp;</b> 
+
+  <!--NavBar-->
+  <div class="navbar">
+    <b>&nbsp;</b><b>&nbsp;</b>
+    <b style="font-family: 'Poppins', sans-serif; font-size: 20px;">TunyakarnK</b>
+    <b style="float: right;">&nbsp;</b>
     <a href="contact.html">Contact</a>
     <a href="exp.html">Experience</a>
     <a href="index.html">Home</a>
+  </div>
+
+  <!--parallax-->
+  <div class="parallax">
+    <img src="picture/BG2.png">
+  </div>
+
+  <!--About me-->
+  <div style="color: #2e3438;background-color:white;text-align:center;padding:30px 80px;text-align: justify;">
+    <p class="heading">ABOUT ME</p>
+    <p style="font-size: 25px;">Hi! My name is Tunyakarn Kitchon. I'm A Computer Engineering Student of Chiang Mai
+      University. I'm interested in Computer Programming, as well as Art, Music and learning new thing! At the moment,
+      I'm learning about website devolopment. Feel free to take a look to know more about me!</p>
+  </div>
+
+  <!--My Skill-->
+  <div style="color: #2e3438;background-color:#b9c9d8;text-align:center;padding:20px 80px;text-align: justify;">
+    <p class="heading">MY SKILL</p>
+
+  <!--programming skill-->
+    <div class="flex p-10 max-w-screen mx-auto shadow-lg rounded-xl " style="background-color: #4a545a;">
+      <img style=" width: 30%;" class="rounded-xl" src="picture/codeBG.jpg">
+      <div class="p-10">
+        <p class="font-semibold" style="color: white; font-size: 30px; margin: 3px;">COMPUTER & PROGRAMMING
+        <p class="text-lg text-white">
+          In Computer Engineering, it is important to use sevaral feilds of computer science to to develop computer
+          hardware and software. Althoug I'm a student, I've experienced some of computer programming
+        </p>
+        </p>
+        <p class="space-y-4">&nbsp;</p>
+        <p class="font-semibold text-xl " style="color: white;margin: 3px;"> Programming </p>
+        <p class="text-lg text-white">
+          During the past few years, I've learnt some of basic programming languages. I learnt C++ coding through 261102
+          Computer Programming subject. I also know some basic coding of C# and scratch.
+        </p>
+        <p class="space-y-4">&nbsp;</p>
+        <p class=" font-semibold text-xl" style="color: white;margin: 3px;"> Website Devolopment
+        <p class="text-lg text-white">
+          I'm curently interested in website devolopment. Now, I'm learning to create website by using HTML, CSS,
+          Javascript etc.
+        </p>
+        </p>>
+      </div>
     </div>
-<!--parallax-->
 
-    <div class="parallax"> 
-    </div>
-    <p>ABOUT ME</p>
-
-    <div class="main">
-      Hi! My name is Tunyakarn Kitchon. I'm A Computer Engineering Student of Chiang Mai University. I'm interested in Computer Programming. as well as Art, Music and learning new thing! At the moment, I'm learning about website devolopment. Feel free to scroll down and take a look to know more about me!
-    </div>
-
-    <!--ประวัติ+รูป-->
-    <div>MY BIO</div>
-<div>Name : Tunyakarn Kitchon (ธันยกานต์ กิจชนม์) Nickname : Gow (เก้า) Birth: 5 December 2001 </div>
-
-  
-  
-  
-      
-
-
+<!-- art&music skill-->
+<p class="space-y-4">&nbsp;</p>
+<div class="flex p-10 max-w-screen mx-auto shadow-lg rounded-xl " style="background-color: #4a545a;">
+  <img style=" width: 30%;" class="rounded-xl" src="picture/ArtBG.jpeg">
+  <div class="p-10">
+    <p class="font-semibold" style="color: white; font-size: 30px; margin: 3px;">Art & Music
+    <p class="text-lg text-white">
+      I love art and music. My hobby has been drawing and playing instruments since I was young.
+    </p>
+  </p>
+  <p class="space-y-4">&nbsp;</p>
+  <p class="font-semibold text-xl " style="color: white;margin: 3px;"> Art </p>
+  <p class="text-lg text-white">
+    When I was young, I really like watching cartoon. I also have surrounded by many artworks since my mother is an art teacher. Therefore it really is an inspiration for me to start learning about art especially drawing.
+  </p>
+  <p class="space-y-4">&nbsp;</p>
+  <p class="font-semibold text-xl " style="color: white;margin: 3px;"> Music </p>
+  <p class="text-lg text-white">
+    "Music is to the mind as air is to the body" - Plato. I always love listening to music. I started playing instruments as my hobby a few years ago. I've learn how to play guitar, basss and the basic of piano. I had once participated in high school concert too!
+  </p>
+</div>
+  </div>
+  <p class="text-center text-gray-700">
+    copyright © 2021 MyPicstory
+</p>
 
 </body>
 
