--- a/exp.html
+++ b/exp.html
@@ -18,7 +18,11 @@
     <a href="exp.html">Experience</a>
     <a href="index.html">Home</a>
     </div>
-
+    
+    <div class="parallax"> 
+      <div class="hero-img">
+    </div>
+  </div>
 
 
 </body>
