--- a/contact.html
+++ b/contact.html
@@ -10,21 +10,27 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-indigo-300">
+<body>
   <!--NavBar-->
   <div class="navbar">
-    <b class="py-3 px-20">TunyakarnK</b>
-     <b style="float: right;">&nbsp;&nbsp;</b> 
+    <b>&nbsp;</b><b>&nbsp;</b>
+    <b style="font-family: 'Poppins', sans-serif; font-size: 20px;">TunyakarnK</b>
+    <b style="float: right;">&nbsp;</b>
     <a href="contact.html">Contact</a>
     <a href="exp.html">Experience</a>
     <a href="index.html">Home</a>
+  </div>
+
+  <div class="row" style="padding: 4%;">
+    <div class="side">
+      <img src="picture/me.png">
     </div>
+    <div class="main">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore vel ex consequuntur officiis laboriosam sit minus incidunt totam. Placeat beatae molestiae perspiciatis aliquam accusantium amet? Facere non dolorem omnis maxime!</div>
+  </div>
 
-    <div class="space-y-10">
-  <div class="space-y-4">
-   
-
-
+  <p class="space-y-4 text-center text-gray-700">
+    copyright © 2021 MyPicstory
+  </p>
 </body>
 
 </html>
