--- a/exp.html
+++ b/exp.html
@@ -10,21 +10,22 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-indigo-300">
+<body>
+  <!--NavBar-->
   <div class="navbar">
-    <b class="py-3 px-20">TunyakarnK</b>
-     <b style="float: right;">&nbsp;&nbsp;</b> 
+    <b>&nbsp;</b><b>&nbsp;</b>
+    <b style="font-family: 'Poppins', sans-serif; font-size: 20px;">TunyakarnK</b>
+    <b style="float: right;">&nbsp;</b>
     <a href="contact.html">Contact</a>
     <a href="exp.html">Experience</a>
     <a href="index.html">Home</a>
-    </div>
-    
-    <div class="parallax"> 
-      <div class="hero-img">
-    </div>
   </div>
 
 
+
+  <p class="space-y-4 text-center text-gray-700">
+    copyright © 2021 MyPicstory
+  </p>
 </body>
 
 </html>
