--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
     <p class="heading">ABOUT ME</p>
     <p style="font-size: 25px;">Hi! My name is Tunyakarn Kitchon. I'm A Computer Engineering Student of Chiang Mai
       University. I'm interested in Computer Programming, as well as Art, Music and learning new thing! At the moment,
-      I'm learning about website devolopment. Feel free to take a look to know more about me!</p>
+      I'm learning about website devolopment. Feel free to take a look and know more about me!</p>
   </div>
 
   <!--My Skill-->
   <div style="color: #2e3438;background-color:#b9c9d8;text-align:center;padding:20px 80px;text-align: justify;">
     <p class="heading">MY SKILL</p>
 
-  <!--programming skill-->
+    <!--programming skill-->
     <div class="flex p-10 max-w-screen mx-auto shadow-lg rounded-xl " style="background-color: #4a545a;">
       <img style=" width: 30%;" class="rounded-xl" src="picture/codeBG.jpg">
       <div class="p-10">
@@ -68,31 +68,35 @@
       </div>
     </div>
 
-<!-- art&music skill-->
-<p class="space-y-4">&nbsp;</p>
-<div class="flex p-10 max-w-screen mx-auto shadow-lg rounded-xl " style="background-color: #4a545a;">
-  <img style=" width: 30%;" class="rounded-xl" src="picture/ArtBG.jpeg">
-  <div class="p-10">
-    <p class="font-semibold" style="color: white; font-size: 30px; margin: 3px;">Art & Music
-    <p class="text-lg text-white">
-      I love art and music. My hobby has been drawing and playing instruments since I was young.
+    <!-- art&music skill-->
+    <p class="space-y-4">&nbsp;</p>
+    <div class="flex p-10 max-w-screen mx-auto shadow-lg rounded-xl " style="background-color: #4a545a;">
+      <img style=" width: 30%;" class="rounded-xl" src="picture/ArtBG.jpeg">
+      <div class="p-10">
+        <p class="font-semibold" style="color: white; font-size: 30px; margin: 3px;">Art & Music
+        <p class="text-lg text-white">
+          I love art and music. My hobby has been drawing and playing instruments since I was young.
+        </p>
+        </p>
+        <p class="space-y-4">&nbsp;</p>
+        <p class="font-semibold text-xl " style="color: white;margin: 3px;"> Art </p>
+        <p class="text-lg text-white">
+          When I was young, I really like watching cartoon. I also have surrounded by many artworks since my mother is
+          an art teacher. Therefore it really is an inspiration for me to start learning about art especially drawing.
+        </p>
+        <p class="space-y-4">&nbsp;</p>
+        <p class="font-semibold text-xl " style="color: white;margin: 3px;"> Music </p>
+        <p class="text-lg text-white">
+          "Music is to the mind as air is to the body" - Plato. I always love listening to music. I started playing
+          instruments as my hobby a few years ago. I've learn how to play guitar, basss and the basic of piano. I had
+          once participated in high school concert too!
+        </p>
+      </div>
+    </div>
+    <p class="space-y-4 text-center text-gray-700">
+      copyright © 2021 MyPicstory
     </p>
-  </p>
-  <p class="space-y-4">&nbsp;</p>
-  <p class="font-semibold text-xl " style="color: white;margin: 3px;"> Art </p>
-  <p class="text-lg text-white">
-    When I was young, I really like watching cartoon. I also have surrounded by many artworks since my mother is an art teacher. Therefore it really is an inspiration for me to start learning about art especially drawing.
-  </p>
-  <p class="space-y-4">&nbsp;</p>
-  <p class="font-semibold text-xl " style="color: white;margin: 3px;"> Music </p>
-  <p class="text-lg text-white">
-    "Music is to the mind as air is to the body" - Plato. I always love listening to music. I started playing instruments as my hobby a few years ago. I've learn how to play guitar, basss and the basic of piano. I had once participated in high school concert too!
-  </p>
-</div>
-  </div>
-  <p class="text-center text-gray-700">
-    copyright © 2021 MyPicstory
-</p>
 
 </body>
+
 </html>
