--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -36,20 +39,29 @@
     <p style="font-size: 25px;">Hi! My name is Tunyakarn Kitchon. I'm A Computer Engineering Student of Chiang Mai
       University. I'm interested in Computer Programming, as well as Art, Music and learning new thing! At the moment,
       I'm learning about website devolopment. Feel free to take a look and know more about me!</p>
+      <div class="flex justify-center">
+      <svg class="animate-bounce w-6 h-6 text-amber-900 " fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
+        <path d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
+      </svg>
+</div>
   </div>
+
 
   <!--My Skill-->
   <div style="color: #2e3438;background-color:#b9c9d8;text-align:center;padding:20px 80px;text-align: justify;">
+    
     <p class="heading">MY SKILL</p>
-
+</div>
+    
     <!--programming skill-->
+    <div class=" p-20 max-w-screen mx-auto" style="background-color:#b9c9d8;">
     <div class="flex p-10 max-w-screen mx-auto shadow-lg rounded-xl " style="background-color: #4a545a;">
       <img style=" width: 30%;" class="rounded-xl" src="picture/codeBG.jpg">
       <div class="p-10">
         <p class="font-semibold" style="color: white; font-size: 30px; margin: 3px;">COMPUTER & PROGRAMMING
         <p class="text-lg text-white">
           In Computer Engineering, it is important to use sevaral feilds of computer science to to develop computer
-          hardware and software. Althoug I'm a student, I've experienced some of computer programming
+          hardware and software. Althoug I'm a student, I've experienced some of computer programming.
         </p>
         </p>
         <p class="space-y-4">&nbsp;</p>
@@ -64,7 +76,7 @@
           I'm curently interested in website devolopment. Now, I'm learning to create website by using HTML, CSS,
           Javascript etc.
         </p>
-        </p>>
+        </p>
       </div>
     </div>
 
@@ -93,10 +105,11 @@
         </p>
       </div>
     </div>
+  </div>
     <p class="space-y-4 text-center text-gray-700">
       copyright © 2021 MyPicstory
     </p>
-
+ 
 </body>
 
 </html>
