--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
 <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body style="background-color: #b9c9d8;">
 
   <!--NavBar-->
   <div class="navbar">
     <b>&nbsp;</b><b>&nbsp;</b>
     <b style="font-family: 'Poppins', sans-serif; font-size: 20px;">TunyakarnK</b>
     <b style="float: right;">&nbsp;</b>
-    <a href="contact.html">Contact</a>
-    <a href="exp.html">Experience</a>
-    <a href="index.html">Home</a>
+    <a href="./contact.html">Contact</a>
+    <a href="./exp.html">Experience</a>
+    <a href="./index.html">Home</a>
   </div>
 
   <!--parallax-->
   <div class="parallax">
-    <img src="picture/BG2.png">
+    <img src="./picture/BG2.png">
   </div>
 
   <!--About me-->
@@ -56,7 +56,7 @@
     <!--programming skill-->
     <div class=" p-20 max-w-screen mx-auto" style="background-color:#b9c9d8;">
     <div class="flex p-10 max-w-screen mx-auto shadow-lg rounded-xl " style="background-color: #4a545a;">
-      <img style=" width: 30%;" class="rounded-xl" src="picture/codeBG.jpg">
+      <img style=" width: 30%;" class="rounded-xl" src="./picture/codeBG.jpg">
       <div class="p-10">
         <p class="font-semibold" style="color: white; font-size: 30px; margin: 3px;">COMPUTER & PROGRAMMING
         <p class="text-lg text-white">
@@ -83,7 +83,7 @@
     <!-- art&music skill-->
     <p class="space-y-4">&nbsp;</p>
     <div class="flex p-10 max-w-screen mx-auto shadow-lg rounded-xl " style="background-color: #4a545a;">
-      <img style=" width: 30%;" class="rounded-xl" src="picture/ArtBG.jpeg">
+      <img style=" width: 30%;" class="rounded-xl" src="./picture/ArtBG.jpeg">
       <div class="p-10">
         <p class="font-semibold" style="color: white; font-size: 30px; margin: 3px;">Art & Music
         <p class="text-lg text-white">
@@ -107,7 +107,7 @@
     </div>
   </div>
     <p class="space-y-4 text-center text-gray-700">
-      copyright © 2021 MyPicstory
+      © 2021 TunyakarnK by Tunyakarn Kitchon. Lastest update 4 July 2021
     </p>
  
 </body>
