--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   </div>
 
   <!--About me-->
-  <div style="color: #2e3438;background-color:white;text-align:center;padding:30px 80px;text-align: justify;">
+  <div style="color: #2e3438;background-color:white;padding:30px 80px;">
     <p class="heading">ABOUT ME</p>
     <p style="font-size: 25px;">Hi! My name is Tunyakarn Kitchon. I'm A Computer Engineering Student of Chiang Mai
       University. I'm interested in Computer Programming, as well as Art, Music and learning new thing! At the moment,
@@ -48,13 +48,12 @@
 
 
   <!--My Skill-->
-  <div style="color: #2e3438;background-color:#b9c9d8;text-align:center;padding:20px 80px;text-align: justify;">
-    
-    <p class="heading">MY SKILL</p>
+  <div style="color: #2e3438;background-color:#b9c9d8;">
+    <p class="heading" style="padding-top: 2%; padding-bottom: 2%;">MY SKILL</p>
 </div>
     
     <!--programming skill-->
-    <div class=" p-20 max-w-screen mx-auto" style="background-color:#b9c9d8;">
+    <div class="  max-w-screen mx-auto" style="background-color:#b9c9d8;">
     <div class="flex p-10 max-w-screen mx-auto shadow-lg rounded-xl " style="background-color: #4a545a;">
       <img style=" width: 30%;" class="rounded-xl" src="./picture/codeBG.jpg">
       <div class="p-10">
@@ -106,6 +105,7 @@
       </div>
     </div>
   </div>
+  <div style="padding-bottom: 2%;"> &nbsp;</div>
     <p class="space-y-4 text-center text-gray-700">
       © 2021 TunyakarnK by Tunyakarn Kitchon. Lastest update 4 July 2021
     </p>
