--- a/exp.html
+++ b/exp.html
@@ -33,19 +33,22 @@
   </div>
 
   <div style="padding-bottom: 3%;"> &nbsp;</div>
- <!--com proj-->
- <div style="color: #2e3438;background-color:white;padding:30px 80px;">
-  <p class="heading">My COMPUTER PROJECT!</p>
+  <!--com proj-->
+  <div style="color: #2e3438;background-color:white;padding:30px 80px;">
+    <p class="heading">My COMPUTER PROJECT!</p>
     <div class="flex justify-center">
-    <svg class="animate-bounce w-6 h-6 text-amber-900 " fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
-      <path d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
-    </svg>
-</div>
-</div>
+      <svg class="animate-bounce w-6 h-6 text-amber-900 " fill="none" stroke-linecap="round" stroke-linejoin="round"
+        stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
+        <path d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
+      </svg>
+    </div>
+  </div>
 
   <!--NR museum-->
-  <div class="row" style="color: #2e3438;background-color:#edf4fc;text-align:center;text-align: justify;padding-top: 5%">
-    <div class="side" style="background-color: white;"><video autoplay muted loop src="./picture/NR museum.mp4" style="padding-top: 8%;"></video></div>
+  <div class="row"
+    style="color: #2e3438;background-color:#edf4fc;text-align:center;text-align: justify;padding-top: 5%">
+    <div class="side" style="background-color: white;"><video autoplay muted loop src="./picture/NR museum.mp4"
+        style="padding-top: 8%;"></video></div>
 
     <div class="main" style="padding-right: 3%;">
       <p class="heading" style="padding-bottom: 5px;">NR-museum</p>
@@ -72,29 +75,33 @@
   </div>
 
   <!--batty bat-->
-  <div class="row" style="color: #2e3438;background-color:#edf4fc;text-align:center;text-align: justify;padding-top: 5%; padding-bottom: 5%;">
+  <div class="row"
+    style="color: #2e3438;background-color:#edf4fc;text-align:center;text-align: justify;padding-top: 5%; padding-bottom: 5%;">
     <div class="side" style="background-color: white;"><img src="./picture/battybat.png"></div>
 
     <div class="main" style="padding-right: 3%;">
       <p class="heading" style="padding-bottom: 5px;">BattyBat</p>
-      <p style="font-size: 25px;">How long this bat will last? help this poor bat dodge over dangerous obstacles! BattyBat is a 2D pixel-graphic game created with c++ and SFML. It is my computer project in 261102 Computer Programming subject.  </p>
+      <p style="font-size: 25px;">How long this bat will last? help this poor bat dodge over dangerous obstacles!
+        BattyBat is a 2D pixel-graphic game created with c++ and SFML. It is my computer project in 261102 Computer
+        Programming subject. </p>
       <a href="https://github.com/TunyakarnK/BattyBat">Visit BattyBat Github</a>
       <div style="padding-bottom: 5%;">&nbsp;</div>
-      </div>
+    </div>
+  </div>
+  </div>
+
+  <!--art-->
+  <div style="color: #2e3438;background-color:white;text-align:center;padding:30px 80px;text-align: justify;">
+    <p class="heading">My Art Gallery!</p>
+    <div class="flex justify-center">
+      <svg class="animate-bounce w-6 h-6 text-amber-900 " fill="none" stroke-linecap="round" stroke-linejoin="round"
+        stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
+        <path d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
+      </svg>
     </div>
   </div>
 
-   <!--art-->
- <div style="color: #2e3438;background-color:white;text-align:center;padding:30px 80px;text-align: justify;">
-  <p class="heading">My Art Gallery!</p>
-    <div class="flex justify-center">
-    <svg class="animate-bounce w-6 h-6 text-amber-900 " fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
-      <path d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
-    </svg>
-</div>
-</div>
-
-<div style="padding-bottom: 3%;"> &nbsp;</div>
+  <div style="padding-bottom: 3%;"> &nbsp;</div>
   <!-- The grid: four columns -->
   <div class="img-row">
     <div class="img-column">
@@ -104,7 +111,7 @@
       <img src="./picture/exp1.png">
       <img src="./picture/exp6.png">
       <img src="./picture/exp14.png">
-      <img style="width: 100%;" src="./picture/exp10.png">  
+      <img style="width: 100%;" src="./picture/exp10.png">
     </div>
     <div class="img-column">
       <img src="./picture/exp2.png">
@@ -113,14 +120,14 @@
       <img src="./picture/exp9.jpg">
       <img style="width: 100%;" src="./picture/exp12.png">
       <img src="./picture/exp13.png">
-      <img style="width: 100%;" src="./picture/exp11.png">           
+      <img style="width: 100%;" src="./picture/exp11.png">
     </div>
   </div>
 
-<div style="padding-bottom: 3%;"> &nbsp;</div>
+  <div style="padding-bottom: 3%;"> &nbsp;</div>
 
   <p class="space-y-4 text-center text-gray-700">
-     © 2021 TunyakarnK by Tunyakarn Kitchon. Lastest update 4 July 2021
+    © 2021 TunyakarnK by Tunyakarn Kitchon. Lastest update 4 July 2021
   </p>
 </body>
 
