--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Prompt&display=swap" rel="stylesheet">
 </head>
 
 <body style="background-color: #b9c9d8;">
@@ -39,21 +39,22 @@
     <p style="font-size: 25px;">Hi! My name is Tunyakarn Kitchon. I'm A Computer Engineering Student of Chiang Mai
       University. I'm interested in Computer Programming, as well as Art, Music and learning new thing! At the moment,
       I'm learning about website devolopment. Feel free to take a look and know more about me!</p>
-      <div class="flex justify-center">
-      <svg class="animate-bounce w-6 h-6 text-amber-900 " fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
+    <div class="flex justify-center">
+      <svg class="animate-bounce w-6 h-6 text-amber-900 " fill="none" stroke-linecap="round" stroke-linejoin="round"
+        stroke-width="2" viewBox="0 0 24 24" stroke="currentColor">
         <path d="M19 14l-7 7m0 0l-7-7m7 7V3"></path>
       </svg>
-</div>
+    </div>
   </div>
 
 
   <!--My Skill-->
   <div style="color: #2e3438;background-color:#b9c9d8;">
     <p class="heading" style="padding-top: 2%; padding-bottom: 2%;">MY SKILL</p>
-</div>
-    
-    <!--programming skill-->
-    <div class="  max-w-screen mx-auto" style="background-color:#b9c9d8;">
+  </div>
+
+  <!--programming skill-->
+  <div class="  max-w-screen mx-auto" style="background-color:#b9c9d8;">
     <div class="flex p-10 max-w-screen mx-auto shadow-lg rounded-xl " style="background-color: #4a545a;">
       <img style=" width: 30%;" class="rounded-xl" src="./picture/codeBG.jpg">
       <div class="p-10">
@@ -106,10 +107,10 @@
     </div>
   </div>
   <div style="padding-bottom: 2%;"> &nbsp;</div>
-    <p class="space-y-4 text-center text-gray-700">
-      © 2021 TunyakarnK by Tunyakarn Kitchon. Lastest update 4 July 2021
-    </p>
- 
+  <p class="space-y-4 text-center text-gray-700">
+    © 2021 TunyakarnK by Tunyakarn Kitchon. Lastest update 4 July 2021
+  </p>
+
 </body>
 
 </html>
