--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <div class="p-10">
         <p class="font-semibold" style="color: white; font-size: 30px; margin: 3px;">Art & Music
         <p class="text-lg text-white">
-          I love art and music. My hobby has been drawing and playing instruments since I was young.
+          I love art and music. My hobbies have been drawing and playing instruments since I was young.
         </p>
         </p>
         <p class="space-y-4">&nbsp;</p>
