not round any more

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   <!--programming skill-->
   <div class="  max-w-screen mx-auto" style="background-color:#b9c9d8;">
-    <div class="flex p-10 max-w-screen mx-auto shadow-lg rounded-xl " style="background-color: #4a545a;">
+    <div class="flex p-10 max-w-screen mx-auto shadow-lg " style="background-color: #4a545a;">
       <img style=" width: 30%;" class="rounded-xl" src="./picture/codeBG.jpg">
       <div class="p-10">
         <p class="font-semibold" style="color: white; font-size: 30px; margin: 3px;">COMPUTER & PROGRAMMING
@@ -82,7 +82,7 @@
 
     <!-- art&music skill-->
     <p class="space-y-4">&nbsp;</p>
-    <div class="flex p-10 max-w-screen mx-auto shadow-lg rounded-xl " style="background-color: #4a545a;">
+    <div class="flex p-10 max-w-screen mx-auto shadow-lg " style="background-color: #4a545a;">
       <img style=" width: 30%;" class="rounded-xl" src="./picture/ArtBG.jpeg">
       <div class="p-10">
         <p class="font-semibold" style="color: white; font-size: 30px; margin: 3px;">Art & Music
